k8s/fcg-services/User/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api
  namespace: fcg-services
spec:
  selector:
    app: user-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
