k8s/fcg-services/User/user-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-ingress
  namespace: fcg-services
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:

      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 80

      - path: /registers
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 80
